# analytics-fc

./: .gitignore  Dockerfile  docker-compose.yml  install_chrome_chromedriver.sh  meltano.yml
.github/workflows/: on-commit.yml
dags/: bau_dag.py
taps/tap-apifootball/: pyproject.toml
taps/tap-apifootball/tap_apifootball/: tap.py
taps/tap-fpl/: pyproject.toml  test_catalog.json
taps/tap-sofifa/: pyproject.toml
taps/tap-statbunker/: README.md  meltano.yml  pyproject.toml  tox.ini
taps/tap-statbunker/tap_statbunker/: client.py  streams.py  tap.py
taps/tap-statbunker/tap_statbunker/schemas/: match_details.json  matches.json  seasons.json
taps/tap-statbunker/tap_statbunker/tests/: __init__.py  test_streams.py
